update readme for linux